fix option offeset, cutoff

--- a/src/app/views/scss/card.scss
+++ b/src/app/views/scss/card.scss
@@ -45,7 +45,7 @@
 }
 
 .card__front__option {
-  padding: 0px 20px;
+
 }
 
 .card__front__option .outerContainer {
